--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@types/jest": "27.4.1",
         "@types/node": "^16.0.0",
         "@types/supertest": "^2.0.11",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "^8.0.1",
@@ -62,7 +63,8 @@
         "ts-loader": "^9.2.3",
         "ts-node": "^10.0.0",
         "tsconfig-paths": "^3.10.1",
-        "typescript": "^4.3.5"
+        "typescript": "^4.3.5",
+        "uuid": "^8.3.2"
     },
     "jest": {
         "moduleFileExtensions": [
