--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
         "currency.js": "^2.0.4",
+        "dotenv": "^16.0.0",
         "moment": "^2.29.3",
+        "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
